séparation des details heroes dans un autre component

--- a/angular-tour-of-heroes/src/styles.scss
+++ b/angular-tour-of-heroes/src/styles.scss
@@ -37,7 +37,10 @@ h1 {
     color: #aaa;
     cursor: auto;
   }
-  
+  .selected{
+    background-color: black;
+    color:white;
+  }
   /* everywhere else */
   * {
     font-family: Arial, Helvetica, sans-serif;
