--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -3,10 +3,22 @@
 <!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
 
 
+<div>
+    <label for="new-hero">Hero name: </label>
+    <input type="text" id="new-hero" #heroName />
+
+    <button type="button" class="add-button" (click)="add(heroName.value); heroName.value=''">
+        Add hero
+    </button>
+</div>
+
 <ul class="heroes">
     <li *ngFor="let hero of heroes">
         <a routerLink="/detail/{{hero.id}}">
             <span class="badge"> {{ hero.id}} </span> {{ hero.name }}
         </a>
+        <button type="button" class="delete" title="delete hero" (click)="delete(hero)">
+            X
+        </button>
     </li>
 </ul>
